basic styles, click listener new activity

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div id="bored-container"></div>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="container">
+        <h1 class="title">🤖 BoredBot 🤖</h1>
+        <h4>Find something to do</h4>
+        <p id="activity">placeholder</p>
+        <input class="btn" id="get-activity" type="button" value="New Activity" />
+      </div>
+    </main>
+
+    <script src="index.js"></script>
+  </body>
 </html>
